Updated code working with MySQL.
